--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URI=mongodb+srv://sinharishabh402:Rishabh324@zeotapcluster.zszsg.mongodb.net/?retryWrites=true&w=majority&appName=Zeotapcluster
+VITE_BACKEND_URI=
