Pushing the final Changes

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,12 @@
 FROM node:alpine
 
+RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-
-RUN npm install --silent
-
 COPY . .
 
+RUN npm install
 EXPOSE 5173
 
 CMD ["npm","run","dev"]
