--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,10 +4,9 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-
-RUN npm install --silent
-
 COPY . .
+
+RUN npm install
 
 EXPOSE 5000
 
