--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,10 @@
   "description": "Backend for zeotap assessment",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.ts",
+    "build": "tsc -p .",
+    "start": "node dist/src/server.js",
+    "test": "jest --runInBand --force-exit"
   },
   "author": "Rishabh Sinha",
   "license": "ISC",
